# global-parser

./: .gitignore  config.py  pyproject.toml
database/: connection.py  loader.py  queries.py
database/sql/: 01_create_tables.sql  01_create_tables.sql.txt  91_drop_all_tables_in_schema_public.sql  99_truncate_cascade_all_tables.sql
docs/prompts/: 01_Create_loader.txt
scrapers/: fs_parser.py  fs_scraper.py  test_parser.py  test_scraper.py  test_session_manager.py
utils/: __init__.py  fs_helpers.py  header_provider.py  helpers.py  logger.py  proxy_provider.py  session_manager.py
