[project]
name = "global-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgeny Kosterin",email = "sparepart74@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "browserforge (>=1.2.3,<2.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "brotli (>=1.2.0,<2.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "psycopg-pool (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
